--- a/Cooking/pom.xml
+++ b/Cooking/pom.xml
@@ -32,6 +32,12 @@
 
 </dependencies>
 
+    <properties>
+        <sonar.organization>cookingms2025</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
+
+
 <build>
         <plugins>
             <plugin>
