--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          working-directory: ./Cooking 
         run: "mvn -B jacoco:prepare-agent verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar jacoco:report -Dsonar.projectKey=CookingMS2025_Cooking -Dsonar.coverage.exclusions=**/SystemMain.java"
