--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+          
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -30,14 +32,17 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+
+
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
-        run:  mvn -f Cooking/Cooking/pom.xml -B clean verify
+        run: >
+          mvn -f Cooking/Cooking/pom.xml -B clean verify
           org.jacoco:jacoco-maven-plugin:report
           org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
           -Dsonar.projectKey=CookingMS2025_Cooking
           -Dsonar.organization=YOUR_ORG_KEY
           -Dsonar.token=${{ secrets.SONAR_TOKEN }}
           -Dsonar.coverage.exclusions=**/SystemMain.java
+
