--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,13 +44,15 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: >
-          mvn -B jacoco:prepare-agent verify
+          mvn -f Cooking/pom.xml -B clean verify
+          org.jacoco:jacoco-maven-plugin:report
           org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-          jacoco:report
-          -Dsonar.coverage.exclusions=**/myCooking/**
           -Dsonar.projectKey=CookingMS2025_Cooking
           -Dsonar.organization=cookingms2025
           -Dsonar.token=${{ secrets.SONAR_TOKEN }}
           -Dsonar.coverage.jacoco.xmlReportPaths=Cooking27/Cooking/target/site/jacoco/jacoco.xml
+          -Dsonar.coverage.exclusions=**/myCooking/**
+
+
           
 
