--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,16 +43,15 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run:|
-       cd Cooking
-       mvn -B clean verify sonar:sonar \
+        run: |
+          cd Cooking
+     mvn -B clean verify sonar:sonar \
       -Dsonar.projectKey=CookingMS2025_Cooking \
       -Dsonar.organization=cookingms2025 \
       -Dsonar.host.url=https://sonarcloud.io \
       -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-      -Dsonar.coverage.jacoco.xmlReportPaths=Cooking/target/site/jacoco/jacoco.xml \
-      -Dsonar.coverage.exclusions=**/myCooking/**\
-
+      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+      -Dsonar.coverage.exclusions=**/myCooking/**
 
           
 
